[gc] Use ECR Public instead of Docker Hub

--- a/gc/Dockerfile
+++ b/gc/Dockerfile
@@ -1,5 +1,5 @@
 ###################################################################################
-FROM sorah/ruby:3.0-dev AS build
+FROM public.ecr.aws/sorah/ruby:3.0-dev AS build
 
 RUN apt-get update && apt-get install -y libpq-dev
 RUN gem install bundler:2.2.27
@@ -13,7 +13,7 @@ RUN bundle config set --local deployment true && \
     bundle install -j4
 
 ###################################################################################
-FROM sorah/ruby:3.0
+FROM public.ecr.aws/sorah/ruby:3.0
 
 RUN apt-get update && apt-get install -y libpq5
 RUN gem install bundler:2.2.27
