Use Maven Central instead of JCenter, which is going to be closed

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ subprojects {
     targetCompatibility = 11
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
