--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -4,8 +4,9 @@ plugins {
 
 dependencies {
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
-    compile group: "org.apache.parquet", name: "parquet-hadoop", version: "1.9.0"
-    compile group: "org.apache.hadoop", name: "hadoop-common", version: "2.7.3"
+    compile group: 'org.apache.parquet', name: 'parquet-hadoop', version: '1.12.3'
+    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.3.4'
+    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '3.3.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.7'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-core', version: '1.11.438'
