--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,27 @@ jobs:
       - name: Create fake REVISION file
         run: echo fake > REVISION
       - run: ./gradlew test --no-daemon
+  docker:
+    name: Docker
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        component:
+          - stream
+          - merge
+          - batch
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: corretto
+          cache: gradle
+      - name: Create fake REVISION file
+        run: echo fake > REVISION
+      - name: Build ${{ matrix.component }} image
+        run: ./gradlew shared:docker ${{ matrix.component }}:jibDockerBuild -Djib.to.image=prism-${{ matrix.component }}
+      - name: Check Hadoop native library
+        run: docker run --entrypoint '' prism-${{ matrix.component}}:fake java -cp '/app/resources:/app/classes:/app/libs/*' org.apache.hadoop.util.NativeLibraryChecker -a
