--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.palantir.docker' version '0.34.0'
+}
+
 dependencies {
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
     compile group: "org.apache.parquet", name: "parquet-hadoop", version: "1.9.0"
@@ -14,4 +18,9 @@ dependencies {
 configurations.all {
     exclude module: 'slf4j-log4j12'
     exclude module: 'log4j'
+}
+
+docker {
+  name 'prism-base'
+  dockerfile file('Dockerfile')
 }
