--- a/stream/build.gradle
+++ b/stream/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "org.springframework.boot" version "2.1.3.RELEASE"
     id "io.spring.dependency-management" version "1.0.7.RELEASE"
-    id "com.google.cloud.tools.jib" version "1.0.1"
+    id "com.google.cloud.tools.jib" version "3.2.1"
 }
 
 dependencies {
@@ -15,6 +15,9 @@ dependencies {
 }
 
 jib {
+    from {
+        image = 'docker://prism-base'
+    }
     to {
         tags = ["latest", rootProject.file("REVISION").text.trim()]
     }
@@ -22,3 +25,4 @@ jib {
         jvmFlags = []
     }
 }
+tasks.jib.dependsOn ':shared:docker'
