Keep WorkDir of built Docker image

--- a/stream/build.gradle
+++ b/stream/build.gradle
@@ -23,6 +23,7 @@ jib {
     }
     container {
         jvmFlags = []
+        workingDirectory = '/app'
     }
 }
 tasks.jib.dependsOn ':shared:docker'
