--- a/batch/build.gradle
+++ b/batch/build.gradle
@@ -22,6 +22,7 @@ jib {
     }
     container {
         jvmFlags = []
+        workingDirectory = '/app'
     }
 }
 tasks.jib.dependsOn ':shared:docker'
