--- a/merge/build.gradle
+++ b/merge/build.gradle
@@ -21,6 +21,7 @@ jib {
     }
     container {
         jvmFlags = []
+        workingDirectory = '/app'
     }
 }
 tasks.jib.dependsOn ':shared:docker'
